# layer-gateway-inference-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  plan.md  pyproject.toml  tmp.md
.github/workflows/: docker-push.yml
app/: __init__.py  build_info.py  main.py
app/api/: routes.py  schemas.py
app/backends/: health.py  probe.py  registry.py  state.py
app/core/: config.py  conversation.py  logging.py  types.py
app/metrics/: prometheus.py  sync.py
app/proxy/: client.py  stream.py
app/queue/: admission_queue.py
app/scheduler/: classifier.py  dispatcher.py  scoring.py
docs/: artichecture.md  conversation-id.md  docs.md  fallback.md  plan.md  request-trace-session-ids.md  sla.md  smoke-test.md
tests/: test_classifier.py  test_conversation.py  test_health.py  test_queue.py  test_ready_probe.py  test_scoring.py  test_upstream_body.py  test_version.py
